--- a/package.json
+++ b/package.json
@@ -8,34 +8,34 @@
   },
   "license": "MIT",
   "exports": {
-    ".": {
-      "require": "./dist/module.cjs",
-      "import": "./dist/module.mjs"
-    }
+    ".":  "./dist/module.mjs"
   },
-  "main": "dist/module.mjs",
-  "module": "dist/module.mjs",
-  "types": "dist/module.d.ts",
+  "main": "./dist/module.mjs",
+  "types": "./dist/module.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "nuxt dev example",
+    "dev": "nuxi dev example",
     "lint": "eslint --ext .js,.ts,.vue .",
     "prepublishOnly": "yarn build",
     "release": "yarn lint && standard-version && git push --follow-tags"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^1.28.5"
+    "@supabase/supabase-js": "^1.28.5",
+    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
+    "defu": "^5.0.0",
+    "pathe": "^0.2.0"
   },
   "devDependencies": {
+    "@nuxt/schema": "npm:@nuxt/schema-edge@latest",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "eslint": "^8.5.0",
-    "nuxt3": "^3.0.0-27333314.c8e281e",
+    "nuxt3": "latest",
     "standard-version": "^9.3.2",
     "typescript": "^4.5.4",
-    "unbuild": "0.6.3"
+    "unbuild": "^0.6.7"
   },
   "publishConfig": {
     "access": "public"
