--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@larbish/supabase",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Supabase module for Nuxt3",
   "repository": {
     "type": "git",
@@ -8,30 +8,33 @@
   },
   "license": "MIT",
   "exports": {
-    ".": "./dist/module.mjs"
+    ".": {
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
+    }
   },
-  "main": "./dist/module.mjs",
-  "types": "./dist/module.d.ts",
+  "main": "./dist/module.cjs",
+  "types": "./dist/types.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
+    "build": "nuxt-module-build",
     "dev": "nuxi dev example",
     "lint": "eslint --ext .js,.ts,.vue .",
-    "prepublishOnly": "yarn build",
+    "prepack": "yarn build",
     "release": "yarn lint && standard-version && git push --follow-tags"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^1.28.5",
+    "@supabase/supabase-js": "^1.29.2",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-    "defu": "^5.0.0",
+    "defu": "^5.0.1",
     "pathe": "^0.2.0"
   },
   "devDependencies": {
     "@nuxt/schema": "npm:@nuxt/schema-edge@latest",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
-    "eslint": "^8.5.0",
+    "eslint": "^8.7.0",
     "nuxt3": "latest",
     "standard-version": "^9.3.2",
     "typescript": "^4.5.4",
