--- a/package.json
+++ b/package.json
@@ -26,19 +26,18 @@
     "release": "yarn lint && standard-version && git push --follow-tags"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^1.29.2",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
+    "@supabase/supabase-js": "^1.29.2",
     "defu": "^5.0.1",
     "pathe": "^0.2.0"
   },
   "devDependencies": {
+    "@nuxt/module-builder": "^0.1.7",
     "@nuxt/schema": "npm:@nuxt/schema-edge@latest",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "eslint": "^8.7.0",
     "nuxt3": "latest",
-    "standard-version": "^9.3.2",
-    "typescript": "^4.5.4",
-    "unbuild": "^0.6.7"
+    "standard-version": "^9.3.2"
   },
   "publishConfig": {
     "access": "public"
