--- a/docs/package.json
+++ b/docs/package.json
@@ -4,18 +4,16 @@
   "description": "Docs for @nuxtjs/supabase",
   "author": "NuxtJS",
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "nuxi start",
-    "generate": "nuxi generate"
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "@docus/docs-theme": "npm:@docus/docs-theme-edge@latest",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@latest",
-    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-    "docus": "npm:docus-edge@latest",
-    "nuxt-edge": "latest",
-    "vue-plausible": "^1.1.4"
+    "docus": "^0.5.14",
+    "nuxt": "^2.15.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "vue-plausible": "^1.3.1"
+  }
 }
