--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@larbish/supabase",
+  "name": "@nuxtjs/supabase",
   "version": "0.0.11",
   "description": "Supabase module for Nuxt3",
   "repository": {
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.1.7",
-    "@nuxt/schema": "npm:@nuxt/schema-edge@latest",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "eslint": "^8.7.0",
     "nuxt3": "latest",
