--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   },
   "dependencies": {
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-    "@supabase/supabase-js": "^1.31.0",
+    "@supabase/supabase-js": "^1.31.1",
     "defu": "^5.0.1",
     "pathe": "^0.2.0"
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.1.7",
-    "@nuxtjs/eslint-config-typescript": "^8.0.0",
-    "eslint": "^8.10.0",
-    "nuxt3": "latest",
+    "@nuxtjs/eslint-config-typescript": "^9.0.0",
+    "eslint": "^8.11.0",
+    "nuxt3": "^3.0.0-27456065.f38cace",
     "standard-version": "^9.3.2"
   }
 }
