--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   },
   "dependencies": {
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-    "@supabase/supabase-js": "^1.32.1",
+    "@supabase/supabase-js": "^1.32.2",
     "defu": "^6.0.0",
     "pathe": "^0.2.0"
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.1.7",
     "@nuxtjs/eslint-config-typescript": "^9.0.0",
-    "eslint": "^8.11.0",
-    "nuxt3": "^3.0.0-27470343.19842ce",
+    "eslint": "^8.12.0",
+    "nuxt3": "latest",
     "standard-version": "^9.3.2"
   }
 }
