chore(demo): improvements

--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/color-mode": "^3.0.2",
     "@nuxtjs/eslint-config-typescript": "^9.0.0",
     "@nuxtjs/supabase": "^0.1.4",
+    "@vueuse/core": "^8.2.0",
+    "@vueuse/nuxt": "^8.2.0",
     "eslint": "^8.12.0",
     "nuxt3": "latest",
     "typescript": "^4.6.3"
