--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nuxt/module-builder": "^0.1.7",
     "@nuxtjs/eslint-config-typescript": "^9.0.0",
     "eslint": "^8.12.0",
-    "nuxt3": "latest",
+    "nuxt3": "^3.0.0-27495976.e31c604",
     "standard-version": "^9.3.2"
   }
 }
