--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "release": "yarn lint && standard-version && git push --follow-tags"
   },
   "dependencies": {
-    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
+    "@nuxt/kit": "^3.0.0-rc.1",
     "@supabase/supabase-js": "^1.33.3",
     "defu": "^6.0.0",
     "pathe": "^0.2.0"
@@ -31,7 +31,7 @@
     "@nuxt/module-builder": "^0.1.7",
     "@nuxtjs/eslint-config-typescript": "^9.0.0",
     "eslint": "^8.12.0",
-    "nuxt3": "^3.0.0-27495976.e31c604",
+    "nuxt": "^3.0.0-rc.1",
     "standard-version": "^9.3.2"
   }
 }
