--- a/demo/package.json
+++ b/demo/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint --ext .ts,.js,.vue ."
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.4",
+    "@iconify-json/mdi": "^1.1.9",
     "@nuxthq/ui": "npm:@nuxthq/ui-edge@latest",
     "@nuxtjs/color-mode": "^3.0.2",
     "@nuxtjs/eslint-config-typescript": "^9.0.0",
-    "@nuxtjs/supabase": "^0.1.4",
-    "eslint": "^8.12.0",
-    "nuxt3": "^3.0.0-27507520.e006c56",
+    "@nuxtjs/supabase": "^0.1.10",
+    "eslint": "^8.14.0",
+    "nuxt": "^3.0.0-rc.1",
     "typescript": "^4.6.3"
   }
 }
