--- a/docs/package.json
+++ b/docs/package.json
@@ -1,19 +1,17 @@
 {
   "name": "@nuxtjs/supabase-docs",
-  "version": "0.0.0",
   "description": "Docs for @nuxtjs/supabase",
-  "author": "NuxtJS",
+  "version": "0.1.0",
   "scripts": {
-    "dev": "nuxt dev",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "docus": "^0.5.14",
-    "nuxt": "^2.15.6"
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "generate": "nuxi build",
+    "preview": "nuxi preview"
   },
   "devDependencies": {
-    "vue-plausible": "^1.1.4"
+    "@docus/docs-theme": "npm:@docus/docs-theme-edge@latest",
+    "@docus/github": "npm:@docus/github-edge@latest",
+    "nuxt": "^3.0.0-rc.3",
+    "vue-plausible": "^1.3.1"
   }
 }
