--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.0.0-rc.8",
-    "@supabase/supabase-js": "^1.35.6",
+    "@supabase/supabase-js": "^1.36.0-next.27",
     "defu": "^6.0.0",
     "pathe": "^0.3.4"
   },
