--- a/demo/package.json
+++ b/demo/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint --ext .ts,.js,.vue ."
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.29",
+    "@iconify-json/mdi": "^1.1.30",
     "@nuxthq/ui": "npm:@nuxthq/ui-edge@latest",
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/supabase": "^0.1.19",
-    "eslint": "^8.20.0",
+    "@nuxtjs/supabase": "^0.2.0-4",
+    "eslint": "^8.22.0",
     "nuxt": "^3.0.0-rc.4",
     "typescript": "^4.7.4"
   }
