--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "build": "nuxt-module-build",
     "prepack": "yarn build",
     "lint": "eslint --ext .js,.ts,.vue .",
-    "release": "yarn lint && standard-version && git push --follow-tags"
+    "release": "yarn lint && standard-version && git push --follow-tags",
+    "prerelease": "yarn lint && standard-version -p && git push --follow-tags && npm publish --tag next"
   },
   "dependencies": {
     "@nuxt/kit": "^3.0.0-rc.11",
-    "@supabase/supabase-js": "^1.35.7",
+    "@supabase/supabase-js": "2.0.0",
     "defu": "^6.1.0",
     "pathe": "^0.3.8"
   },
