--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "release:prerelease": "yarn lint && standard-version -p && git push --follow-tags && npm publish --tag next"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.0.0-rc.13",
-    "@supabase/supabase-js": "2.0.6",
-    "defu": "^6.1.0",
-    "pathe": "^0.3.9"
+    "@nuxt/kit": "^3.0.0",
+    "@supabase/supabase-js": "2.1.0",
+    "defu": "^6.1.1",
+    "pathe": "^1.0.0"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "^0.2.0",
-    "@nuxtjs/eslint-config-typescript": "^11.0.0",
-    "eslint": "^8.27.0",
-    "nuxt": "^3.0.0-rc.13",
+    "@nuxt/module-builder": "^0.2.1",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "eslint": "^8.28.0",
+    "nuxt": "^3.0.0",
     "standard-version": "^9.5.0"
   }
 }
