--- a/demo/package.json
+++ b/demo/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.1.1",
-    "@nuxthq/ui": "^0.1.34",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxthq/ui": "^0.1.38",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/supabase": "^0.3.0",
     "eslint": "^8.33.0",
-    "nuxt": "^3.1.1",
-    "typescript": "^4.9.4"
+    "nuxt": "^3.1.2",
+    "typescript": "^4.9.5"
   }
 }
