--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
     "release:prerelease": "yarn lint && standard-version -p && git push --follow-tags && npm publish --tag next"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.0.0",
-    "@supabase/supabase-js": "2.1.0",
-    "defu": "^6.1.1",
-    "pathe": "^1.0.0"
+    "@nuxt/kit": "^3.1.2",
+    "@supabase/supabase-js": "2.7.1",
+    "defu": "^6.1.2",
+    "pathe": "^1.1.0"
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.2.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.28.0",
-    "nuxt": "^3.0.0",
+    "@types/node": "^18.13.0",
+    "eslint": "^8.33.0",
+    "nuxt": "^3.1.2",
     "standard-version": "^9.5.0"
   }
 }
