--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "release": "yarn lint && release-it"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.1.2",
-    "@supabase/supabase-js": "2.7.1",
+    "@nuxt/kit": "^3.3.2",
+    "@supabase/supabase-js": "2.13.1",
     "defu": "^6.1.2",
     "pathe": "^1.1.0"
   },
   "devDependencies": {
+    "@nuxt/schema": "^3.3.2",
     "@nuxt/module-builder": "^0.2.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@types/node": "^18.13.0",
-    "eslint": "^8.33.0",
-    "nuxt": "^3.1.2",
-    "release-it": "^15.6.0"
+    "@types/node": "^18.15.11",
+    "eslint": "^8.37.0",
+    "nuxt": "^3.3.2",
+    "release-it": "^15.9.3"
   },
   "release-it": {
     "git": {
