--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,37 +15,26 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest] # macos-latest, windows-latest
-        node: [16]
+        node: [18]
 
     steps:
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
         with:
-          node-version: ${{ matrix.node }}
-
-      - name: Checkout
-        uses: actions/checkout@master
+          version: 7
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          persist-credentials: false
-          fetch-depth: 0
-
-      - name: Cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
-
-      - name: Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn
-
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
       - name: Prepare Dev
-        run: yarn dev:prepare
-
+        run: pnpm run dev:prepare
       - name: Lint
-        run: yarn lint
-
+        run: pnpm run lint
       - name: Build
-        run: yarn build
+        run: pnpm run build
 
       # - name: Version Check
       #   id: check
