--- a/demo/package.json
+++ b/demo/package.json
@@ -10,12 +10,18 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxthq/ui": "^1.2.3",
+    "@iconify-json/heroicons": "^1.1.10",
+    "@iconify-json/heroicons-outline": "^1.1.6",
+    "@iconify-json/mdi": "^1.1.50",
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxthq/ui": "^1.2.10",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/supabase": "^0.3.5",
-    "eslint": "^8.37.0",
-    "nuxt": "^3.3.3",
-    "typescript": "^5.0.3"
+    "eslint": "^8.38.0",
+    "nuxt": "^3.4.1",
+    "typescript": "^5.0.4"
+  },
+  "resolutions": {
+    "consola": "^3.0.0"
   }
 }
