chore(playground): dev tools

--- a/playground/package.json
+++ b/playground/package.json
@@ -1,4 +1,7 @@
 {
   "private": true,
-  "name": "supabase-module-playground"
+  "name": "supabase-module-playground",
+  "devDependencies": {
+    "@nuxt/devtools": "^0.5.5"
+  }
 }
