--- a/demo/package.json
+++ b/demo/package.json
@@ -12,14 +12,14 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.10",
     "@iconify-json/heroicons-outline": "^1.1.6",
-    "@iconify-json/mdi": "^1.1.50",
+    "@iconify-json/mdi": "^1.1.52",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxthq/ui": "^1.2.10",
     "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/supabase": "^0.3.5",
-    "eslint": "^8.38.0",
-    "nuxt": "^3.4.1",
-    "typescript": "^5.0.4"
+    "@nuxtjs/supabase": "^0.3.6-0",
+    "eslint": "^8.41.0",
+    "nuxt": "^3.5.2",
+    "typescript": "^5.1.3"
   },
   "resolutions": {
     "consola": "^3.0.0"
