--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuxtjs/supabase",
+  "name": "@aietes/supabase",
   "version": "0.3.8",
   "description": "Supabase module for Nuxt",
   "repository": "nuxt-community/supabase-module",
