--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "pre:release": "pnpm lint && release-it --preRelease"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.6.1",
-    "@supabase/supabase-js": "2.26.0",
+    "@nuxt/kit": "^3.6.5",
+    "@supabase/supabase-js": "2.31.0",
     "defu": "^6.1.2",
     "pathe": "^1.1.1"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "^0.4.0",
-    "@nuxt/schema": "^3.6.1",
     "@nuxt/eslint-config": "^0.1.1",
-    "@types/node": "^20.3.3",
-    "eslint": "^8.44.0",
-    "nuxt": "^3.6.1",
-    "release-it": "^15.11.0",
+    "@nuxt/module-builder": "^0.4.0",
+    "@nuxt/schema": "^3.6.5",
+    "@types/node": "^20.4.5",
+    "eslint": "^8.46.0",
+    "nuxt": "^3.6.5",
+    "prettier": "^3.0.0",
+    "release-it": "^16.1.3",
     "typescript": "^5.1.6"
   },
   "release-it": {
