--- a/docs/package.json
+++ b/docs/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "@nuxtjs/supabase-docs",
-  "description": "Docs for @nuxtjs/supabase",
+  "name": "docus-starter",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi build",
-    "generate": "nuxi build",
-    "preview": "nuxi preview"
+    "generate": "nuxi generate",
+    "preview": "nuxi preview",
+    "lint": "eslint ."
   },
   "devDependencies": {
-    "@docus/docs-theme": "npm:@docus/docs-theme-edge@latest",
-    "@docus/github": "npm:@docus/github-edge@latest",
-    "nuxt": "^3.0.0-rc.4",
-    "vue-plausible": "^1.3.2"
+    "@nuxt-themes/docus": "^1.13.1",
+    "@nuxt/devtools": "^0.6.7",
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxtjs/plausible": "^0.2.1",
+    "@nuxtlabs/github-module": "^1.6.3",
+    "@types/node": "^20.4.0",
+    "eslint": "^8.44.0",
+    "nuxt": "^3.6.2"
   }
 }
