--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxt/kit": "^3.6.5",
     "@supabase/supabase-js": "2.31.0",
     "defu": "^6.1.2",
+    "execa": "^8.0.1",
     "pathe": "^1.1.1"
   },
   "devDependencies": {
