--- a/docs/package.json
+++ b/docs/package.json
@@ -11,12 +11,14 @@
   },
   "devDependencies": {
     "@nuxt-themes/docus": "^1.14.6",
-    "@nuxt/devtools": "^0.7.4",
-    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxt/devtools": "^0.8.2",
+    "@nuxt/content": "^2.8.2",
+    "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/plausible": "^0.2.1",
+    "@nuxthq/studio": "^0.14.0",
     "@nuxtlabs/github-module": "^1.6.3",
-    "@types/node": "^20.4.5",
-    "eslint": "^8.46.0",
-    "nuxt": "^3.6.5"
+    "@types/node": "^20.5.9",
+    "eslint": "^8.48.0",
+    "nuxt": "^3.7.1"
   }
 }
