--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
-    "build": "nuxt-module-build",
+    "build": "nuxt-module-build build",
     "lint": "eslint --ext .js,.ts,.vue .",
     "release": "pnpm lint && release-it",
     "pre:release": "pnpm lint && release-it --preRelease"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.7.4",
-    "@supabase/supabase-js": "2.38.0",
-    "defu": "^6.1.2",
+    "@nuxt/kit": "^3.8.1",
+    "@supabase/supabase-js": "2.38.4",
+    "defu": "^6.1.3",
     "pathe": "^1.1.1"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/module-builder": "^0.5.2",
-    "@nuxt/schema": "^3.7.4",
-    "@release-it/conventional-changelog": "^7.0.2",
-    "@types/node": "^20.8.2",
-    "eslint": "^8.50.0",
-    "nuxt": "^3.7.4",
-    "prettier": "^3.0.3",
-    "release-it": "^16.2.1",
+    "@nuxt/module-builder": "^0.5.4",
+    "@nuxt/schema": "^3.8.1",
+    "@release-it/conventional-changelog": "^8.0.1",
+    "@types/node": "^20.9.1",
+    "eslint": "^8.53.0",
+    "nuxt": "^3.8.1",
+    "prettier": "^3.1.0",
+    "release-it": "^17.0.0",
     "typescript": "^5.2.2"
   },
   "release-it": {
