--- a/demo/package.json
+++ b/demo/package.json
@@ -10,15 +10,15 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.12",
+    "@iconify-json/heroicons": "^1.1.13",
     "@iconify-json/heroicons-outline": "^1.1.7",
-    "@iconify-json/mdi": "^1.1.54",
-    "@nuxt/eslint-config": "^0.2.0",
+    "@iconify-json/mdi": "^1.1.55",
     "@nuxthq/ui": "^1.2.10",
-    "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/supabase": "^1.1.3",
-    "eslint": "^8.50.0",
-    "nuxt": "^3.7.4",
+    "eslint": "^8.53.0",
+    "nuxt": "^3.8.1",
     "typescript": "^5.2.2"
   },
   "resolutions": {
