--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": [
     "@nuxtjs/eslint-config-typescript"
   ],
+  "root": true,
   "rules": {
     "no-console": [2, { "allow": ["trace"] }],
     "vue/multi-word-component-names": 0
