--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nuxtjs/supabase",
-  "version": "1.1.4",
+  "name": "jfoucher-nuxt-supabase",
+  "version": "1.1.5",
   "description": "Supabase module for Nuxt",
   "repository": "nuxt-community/supabase-module",
   "license": "MIT",
