--- a/docs/package.json
+++ b/docs/package.json
@@ -12,24 +12,24 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@iconify-json/heroicons": "^1.1.13",
-    "@iconify-json/simple-icons": "^1.1.78",
-    "@nuxt/content": "^2.9.0",
-    "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@0.4.2-28327301.722ea75",
+    "@iconify-json/heroicons": "^1.1.19",
+    "@iconify-json/simple-icons": "^1.1.89",
+    "@nuxt/content": "^2.11.0",
+    "@nuxt/ui-pro": "^0.7.3",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "nuxt": "^3.8.1",
+    "@nuxtjs/google-fonts": "^3.1.3",
+    "nuxt": "^3.9.3",
     "nuxt-og-image": "^2.2.4"
   },
   "devDependencies": {
-    "@nuxt/devtools": "1.0.0",
+    "@nuxt/devtools": "1.0.8",
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxthq/studio": "^1.0.4",
-    "@nuxtjs/plausible": "^0.2.3",
+    "@nuxthq/studio": "^1.0.10",
+    "@nuxtjs/plausible": "^0.2.4",
     "@nuxtlabs/github-module": "^1.6.3",
-    "eslint": "^8.53.0",
-    "typescript": "^5.2.2",
-    "vue-tsc": "^1.8.22"
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3",
+    "vue-tsc": "^1.8.27"
   }
 }
