--- a/docs/package.json
+++ b/docs/package.json
@@ -31,5 +31,9 @@
     "eslint": "^8.56.0",
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.27"
+  },
+  "resolutions": {
+    "vue": "3.3.13",
+    "mdast-util-gfm-table": "^2.0.0"
   }
 }
