--- a/demo/package.json
+++ b/demo/package.json
@@ -7,19 +7,18 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.13",
-    "@iconify-json/heroicons-outline": "^1.1.7",
-    "@iconify-json/mdi": "^1.1.55",
+    "@iconify-json/heroicons": "^1.1.20",
+    "@iconify-json/heroicons-outline": "^1.1.10",
+    "@iconify-json/mdi": "^1.1.66",
     "@nuxthq/ui": "^1.2.10",
-    "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/supabase": "^1.1.3",
-    "eslint": "^8.53.0",
-    "nuxt": "^3.8.1",
-    "typescript": "^5.2.2"
+    "@nuxtjs/color-mode": "^3.4.0",
+    "@nuxtjs/supabase": "^1.2.0",
+    "nuxt": "^3.11.2",
+    "typescript": "^5.4.5"
   },
   "resolutions": {
     "consola": "^3.0.0"
