--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Supabase module for Nuxt",
   "repository": "nuxt-community/supabase-module",
   "license": "MIT",
+  "packageManager": "pnpm@9.1.3",
   "exports": {
     ".": {
       "import": "./dist/module.mjs",
