--- a/demo/package.json
+++ b/demo/package.json
@@ -14,11 +14,10 @@
     "@iconify-json/heroicons": "^1.1.20",
     "@iconify-json/heroicons-outline": "^1.1.10",
     "@iconify-json/mdi": "^1.1.66",
-    "@nuxthq/ui": "^1.2.10",
-    "@nuxtjs/color-mode": "^3.4.0",
-    "@nuxtjs/supabase": "^1.2.0",
+    "@nuxt/ui": "2.18.4",
+    "@nuxtjs/supabase": "^1.3.5",
     "nuxt": "^3.13.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4"
   },
   "resolutions": {
     "consola": "^3.0.0"
