--- a/demo/package.json
+++ b/demo/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "engines": {
-    "node": ">=20.10.0"
+    "node": ">=20.9.0"
   },
   "scripts": {
     "dev": "nuxi dev",
@@ -11,16 +11,15 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.20",
-    "@iconify-json/heroicons-outline": "^1.1.10",
-    "@iconify-json/mdi": "^1.1.66",
-    "@nuxthq/ui": "^1.2.10",
-    "@nuxtjs/color-mode": "^3.4.0",
-    "@nuxtjs/supabase": "^1.2.0",
-    "nuxt": "^3.11.2",
-    "typescript": "^5.4.5"
+    "@iconify-json/heroicons": "^1.2.0",
+    "@iconify-json/heroicons-outline": "^1.2.0",
+    "@iconify-json/mdi": "^1.2.0",
+    "@nuxt/ui": "2.18.4",
+    "@nuxtjs/supabase": "^1.4.0",
+    "nuxt": "^3.13.1",
+    "typescript": "^5.5.4"
   },
   "resolutions": {
-    "consola": "^3.0.0"
+    "@nuxt/icon": "^1.5.1"
   }
 }
