--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,8 +16,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4 # v4
-      - name: Add pnpm
-        run: corepack enable
+      - name: Install latest Corepack
+        run: |
+          npm uninstall -g corepack
+          npm install -g corepack
+          corepack enable
       - uses: actions/setup-node@v4
         with:
           node-version: 22
