--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "url": "git+https://github.com/nuxt-modules/supabase.git"
   },
   "license": "MIT",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.10.0",
   "exports": {
     ".": {
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+      "import": "./dist/module.mjs"
     }
   },
-  "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "main": "./dist/module.mjs",
   "files": [
     "dist"
   ],
@@ -30,23 +28,23 @@
     "pre:release": "pnpm lint && release-it --preRelease"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "defu": "^6.1.4",
     "pathe": "^2.0.3"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.1.0",
-    "@nuxt/kit": "^3.15.4",
-    "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.15.4",
-    "@release-it/conventional-changelog": "^10.0.0",
-    "@types/node": "^22.13.5",
-    "changelogen": "^0.6.0",
-    "eslint": "^9.21.0",
-    "nuxt": "^3.15.4",
-    "release-it": "^18.1.2",
-    "typescript": "^5.6.3"
+    "@nuxt/eslint": "^1.3.0",
+    "@nuxt/kit": "^3.17.2",
+    "@nuxt/module-builder": "^1.0.1",
+    "@nuxt/schema": "^3.17.2",
+    "@release-it/conventional-changelog": "^10.0.1",
+    "@types/node": "^22.15.3",
+    "changelogen": "^0.6.1",
+    "eslint": "^9.26.0",
+    "nuxt": "^3.17.2",
+    "release-it": "^19.0.2",
+    "typescript": "^5.8.3"
   },
   "resolutions": {
     "typescript": "5.6.3"
