--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -17,11 +17,24 @@ logs
 .DS_Store
 .fleet
 .idea
+.eslintcache
 
 # Local env files
 .env
 .env.*
 !.env.example
 
-# VSC
+# Template
+template/pnpm-lock.yaml
+
+# npm pack
+*.tgz
+
+# Temp files
+.tmp
+.profile
+*.0x
+
+#VSC
 .history
+.wrangler
