--- a/docs/package.json
+++ b/docs/package.json
@@ -1,39 +1,16 @@
 {
   "name": "nuxt-supabase-docs",
-  "private": true,
+  "description": "Nuxt x Supabase Module Docs",
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "typecheck": "nuxt typecheck"
-  },
-  "dependencies": {
-    "@iconify-json/heroicons": "^1.1.21",
-    "@iconify-json/simple-icons": "^1.1.108",
-    "@nuxt/content": "^2.13.1",
-    "@nuxt/ui-pro": "^1.3.1",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/fontaine": "^0.4.3",
-    "@nuxtjs/google-fonts": "^3.2.0",
-    "nuxt": "^3.12.3",
-    "nuxt-og-image": "^2.2.6"
+    "build": "docus build",
+    "dev": "docus dev"
   },
   "devDependencies": {
-    "@nuxt/devtools": "1.3.9",
-    "@nuxt/eslint-config": "^0.3.13",
-    "@nuxthq/studio": "^2.0.3",
-    "@nuxtjs/plausible": "^1.0.0",
-    "@nuxtlabs/github-module": "^1.6.3",
-    "eslint": "^9.6.0",
-    "typescript": "^5.5.3",
-    "vue-tsc": "^2.0.26"
+    "@larbish/docus": "latest"
   },
-  "resolutions": {
-    "vue": "3.3.13",
-    "mdast-util-gfm-table": "^2.0.0"
+  "packageManager": "pnpm@10.10.0",
+  "dependencies": {
+    "@nuxtjs/plausible": "1.2.0"
   }
 }
