--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,6 +1,7 @@
 {
+  // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "strictNullChecks": false
+    "noImplicitAny": false
   }
 }
