--- a/docs/package.json
+++ b/docs/package.json
@@ -7,8 +7,8 @@
     "dev": "docus dev"
   },
   "devDependencies": {
-    "@larbish/docus": "latest",
+    "docus": "v3.0.0-alpha.0",
     "@nuxtjs/plausible": "1.2.0"
   },
-  "packageManager": "pnpm@10.10.0"
+  "packageManager": "pnpm@10.12.1"
 }
