--- a/demo/package.json
+++ b/demo/package.json
@@ -9,16 +9,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.44",
+    "@iconify-json/lucide": "^1.2.48",
+    "@iconify-json/simple-icons": "^1.2.38",
     "@nuxt/eslint": "1.4.1",
-    "@nuxt/ui-pro": "3.1.2",
-    "@nuxtjs/supabase": "1.5.1",
-    "eslint": "^9.0.0",
-    "nuxt": "^3.17.3",
-    "tailwindcss": "^4.1.7",
-    "typescript": "^5.6.3",
-    "vue": "^3.5.14",
+    "@nuxt/ui-pro": "3.1.3",
+    "@nuxtjs/supabase": "1.5.2",
+    "eslint": "^9.28.0",
+    "nuxt": "^3.17.5",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5.8.3",
+    "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
-  "packageManager": "pnpm@10.11.0"
+  "packageManager": "pnpm@10.12.1"
 }
