--- a/docs/pnpm-workspace.yaml
+++ b/docs/pnpm-workspace.yaml
@@ -1,8 +1,10 @@
-onlyBuiltDependencies:
-  - better-sqlite3
-  - sharp
 ignoredBuiltDependencies:
   - '@parcel/watcher'
+  - '@tailwindcss/oxide'
   - esbuild
   - unrs-resolver
   - vue-demi
+
+onlyBuiltDependencies:
+  - better-sqlite3
+  - sharp
