--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci-main
+name: ci
 
 on:
   push:
@@ -9,41 +9,48 @@ on:
       - main
 
 jobs:
-  ci:
+  build:
     runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+      pull-requests: read
 
     strategy:
       matrix:
-        os: [ubuntu-latest] # macos-latest, windows-latest
+        os: [ubuntu-latest]
         node: [22]
 
+    env:
+      NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10.13.1
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Install node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          node-version: ${{ matrix.node }}
+          cache: pnpm
+
       - name: Install dependencies
         run: pnpm install
-      - name: Prepare Dev
+
+      - name: Prepare
         run: pnpm run dev:prepare
+
       - name: Lint
         run: pnpm run lint
+
+      - name: Typecheck
+        run: pnpm run typecheck
+
       - name: Build
         run: pnpm run build
 
-      # - name: Version Check
-      #   id: check
-      #   uses: EndBug/version-check@v2
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Release
-      #   if: github.event_name == 'push' && steps.check.outputs.changed == 'true'
-      #   run: ./scripts/release.sh
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+      - name: Publish
+        run: pnpx pkg-pr-new publish --compact --no-template --pnpm
