--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "scripts": {
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground && nuxi prepare demo && nuxi prepare docs",
     "build": "nuxt-module-build build",
     "lint": "eslint .",
+    "typecheck": "nuxi typecheck",
     "lint:fix": "eslint . --fix",
     "release": "pnpm lint && release-it",
     "pre:release": "pnpm lint && release-it --preRelease"
@@ -35,16 +36,17 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.6.0",
-    "@nuxt/kit": "^3.17.5",
+    "@nuxt/kit": "^4.0.0",
     "@nuxt/module-builder": "^1.0.1",
-    "@nuxt/schema": "^3.17.5",
+    "@nuxt/schema": "^4.0.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/node": "^24.0.15",
     "changelogen": "^0.6.2",
     "eslint": "^9.31.0",
-    "nuxt": "^3.17.5",
+    "nuxt": "^4.0.0",
     "release-it": "^19.0.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vue-tsc": "^3.0.3"
   },
   "resolutions": {
     "typescript": "5.6.3"
