--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,13 @@
 {
   "extends": "./.nuxt/tsconfig.json",
+  "exclude": [
+    "dist",
+    "node_modules",
+    "docs",
+    "playground",
+    "examples"
+  ],
+  "include": [
+    "src",
+  ],
 }
