--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,10 +1,14 @@
+packages:
+  - playground
+  - docs
+  - demo
+
 ignoredBuiltDependencies:
-  - '@parcel/watcher'
   - '@tailwindcss/oxide'
-  - esbuild
-  - unrs-resolver
   - vue-demi
 
 onlyBuiltDependencies:
-  - better-sqlite3
+  - '@parcel/watcher'
+  - esbuild
   - sharp
+  - unrs-resolver
