--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.56.0",
+    "@supabase/supabase-js": "^2.57.0",
     "defu": "^6.1.4",
     "pathe": "^2.0.3"
   },
@@ -42,14 +42,14 @@
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/node": "^24.3.0",
     "changelogen": "^0.6.2",
-    "eslint": "^9.33.0",
+    "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
     "release-it": "^19.0.4",
     "typescript": "^5.9.2",
     "vue-tsc": "^3.0.6"
   },
   "resolutions": {
-    "typescript": "5.6.3"
+    "typescript": "^5.9.2"
   },
   "release-it": {
     "git": {
