fix(nuxt): suppress supabase warnings, improve typings, and update dependencies
- suppress known @supabase/supabase-js UNUSED_EXTERNAL_IMPORT false-positive warnings in Nuxt playground
- refactor module Nitro config handling for better Nuxt/Nitro type safety
- replace fs default import with existsSync for cleaner Node ESM/TS compatibility
- apply lint-safe cleanup with no functional behavior change
- update project dependencies via pnpm update

Validation:
- pnpm run dev:prepare
- pnpm run typecheck
- pnpm run lint
- pnpm build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,5 @@
 {
   "extends": "./.nuxt/tsconfig.json",
-  "exclude": [
-    "dist",
-    "node_modules",
-    "docs",
-    "playground",
-    "examples"
-  ],
-  "include": [
-    "src",
-  ],
+  "exclude": ["dist", "node_modules", "docs", "playground", "examples"],
+  "include": ["src"]
 }
