--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.86.0",
+    "@supabase/supabase-js": "^2.95.3",
     "defu": "^6.1.4",
     "pathe": "^2.0.3"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.11.0",
-    "@nuxt/kit": "^4.2.1",
+    "@nuxt/eslint": "^1.15.1",
+    "@nuxt/kit": "^4.3.1",
     "@nuxt/module-builder": "^1.0.2",
-    "@nuxt/schema": "^4.2.1",
-    "@release-it/conventional-changelog": "^10.0.2",
-    "@types/node": "^24.10.1",
+    "@nuxt/schema": "^4.3.1",
+    "@release-it/conventional-changelog": "^10.0.5",
+    "@types/node": "^24.10.13",
     "changelogen": "^0.6.2",
-    "eslint": "^9.39.1",
-    "nuxt": "^4.2.1",
-    "release-it": "^19.0.6",
-    "typescript": "^5.9.3",
-    "vue-tsc": "^3.1.5"
+    "eslint": "^9.39.2",
+    "nuxt": "^4.3.1",
+    "release-it": "^19.2.4",
+    "typescript": "5.6.3",
+    "vue-tsc": "^3.2.4"
   },
   "resolutions": {
     "typescript": "5.6.3"
